clean filterChain